# TestGeoLocator

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  build.py  make-docs.sh  make.sh  preprocess.sh
data/: database.csv
docs/html/: _binary_geo_database_loader_8h.html  _binary_geo_database_loader_8h.js  _binary_geo_database_loader_8h_source.html  _command_parser_8cpp.html  _command_parser_8h.html  _command_parser_8h.js  _command_parser_8h_source.html  _concrete_command_factory_8cpp.html  _concrete_command_factory_8h.html  _concrete_command_factory_8h.js  _concrete_command_factory_8h_source.html  _csv_geo_preprocessor_source_8cpp.html  _csv_geo_preprocessor_source_8h.html  _csv_geo_preprocessor_source_8h.js  _csv_geo_preprocessor_source_8h_source.html  _exit_command_handler_8cpp.html  _exit_command_handler_8h.html  _exit_command_handler_8h.js  _exit_command_handler_8h_source.html  _geo_locator_8h.html  _geo_locator_8h.js  _geo_locator_8h_source.html  _geo_preprocessor_8cpp.html  _geo_preprocessor_8cpp.js  _geo_preprocessor_8h.html  _geo_preprocessor_8h.js  _geo_preprocessor_8h_source.html  _geo_record_8h.html  _geo_record_8h.js  _geo_record_8h_source.html  _geo_service_8cpp.html  _geo_service_8h.html  _geo_service_8h.js  _geo_service_8h_source.html  _i_command_factory_8h.html  _i_command_factory_8h.js  _i_command_factory_8h_source.html  _i_command_handler_8h.html  _i_command_handler_8h.js  _i_command_handler_8h_source.html  (+141 more)
docs/html/search/: all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  namespaces_0.js  searchdata.js  (+4 more)
geolocator/: CMakeLists.txt  main.cpp
geolocator/command/: CommandParser.cpp  CommandParser.h  ParsedCommand.h
geolocator/command/handlers/: ExitCommandHandler.cpp  ExitCommandHandler.h  LoadCommandHandler.cpp  LoadCommandHandler.h  LookupCommandHandler.cpp  LookupCommandHandler.h
geolocator/common/: ChunkInfo.h  GeoRecord.h
geolocator/factory/: ConcreteCommandFactory.cpp  ConcreteCommandFactory.h
geolocator/interfaces/: ICommandFactory.h  ICommandHandler.h  IGeoDatabaseLoader.h  IGeoRecordProvider.h  ILocator.h
geolocator/loaders/: BinaryGeoDatabaseLoader.cpp  BinaryGeoDatabaseLoader.h
geolocator/locator/: GeoLocator.cpp  GeoLocator.h  VectorGeoRecordProvider.cpp  VectorGeoRecordProvider.h
geolocator/service/: CommandService.cpp  CommandService.h  GeoService.cpp  GeoService.h
include/common/: ChunkInfo.h
include/loaders/: BinaryGeoDatabaseLoader.h  IGeoDatabaseLoader.h
include/locator/: GeoLocator.h  IGeoRecordProvider.h  VectorGeoRecordProvider.h
preprocessor/: CMakeLists.txt  CsvGeoPreprocessorSource.cpp  CsvGeoPreprocessorSource.h  GeoPreprocessor.cpp  GeoPreprocessor.h  IGeoPreprocessorSource.h  main.cpp
src/loaders/: BinaryGeoDatabaseLoader.cpp
src/locator/: GeoLocator.cpp  VectorGeoRecordProvider.cpp
tests/: CMakeLists.txt  CommandParserTests.cpp  CommandServiceTests.cpp  ConcreteCommandFactoryTests.cpp  ExitCommandHandlerTests.cpp  GeoDataLoaderTests.cpp  GeoLocatorTests.cpp  LoadCommandHandlerTests.cpp  LookupCommandHandlerTests.cpp  PreprocessorTests.cpp
tests/mockData/: database_1000.csv
